<resources>
    <string name="app_name">GameHub</string>
    <string name="password">비밀번호</string>
    <string name="login_info"><b>이메일과 비밀번호를\n입력하세요</b></string>
    <string name="signup_info"><b>사용할 이메일을 입력하고\n비밀번호를 설정하세요</b></string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="Password">비밀번호</string>
    <string name="signup">회원가입</string>
    <string name="confirm">비밀번호 확인</string>
    <string name="gender">성별</string>
    <string name="name">이름</string>
    <string name="logout">로그아웃</string>
    <string name="wrong_id">잘못된 유형의 이메일 주소입니다.</string>
    <string name="wrong_pw">비밀번호는 8자 이상이어야 합니다.</string>
    <string name="right_pw">사용가능한 비밀번호입니다.</string>
    <string name="ckpw_1">비밀번호가 일치하지 않습니다.</string>
    <string name="ckpw_2">비밀번호가 일치합니다.</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="positive">positive</string>
    <string name="negative">negative</string>
    <string name="recommend">추천 게임</string>
    <string name="rating">평가</string>
    <string name="comment">코멘트</string>
    <string name="edit_comment">코멘트 수정</string>
    <string name="delete_comment">코멘트 삭제</string>
    <string name="favorite">즐겨찾기</string>
    <string name="archive">보관함</string>
    <string name="rating2">평가한</string>
    <string name="wish">하고싶어요</string>
    <string name="playing">하는중</string>
    <string name="tag">장르</string>
    <string name="like_tag">좋아한 장르</string>
    <string name="dislike_tag">싫어한 장르</string>
    <string name="like">좋아요</string>
    <string name="Destitle">기본정보</string>
    <string name="reson">내가 좋아할 이유</string>

    <string-array name="tag">
        <item>CCG</item>
        <item>FPS</item>
        <item>HORROR</item>
        <item>MMORPG</item>
        <item>RPG</item>
        <item>TRPG</item>
    </string-array>
</resources>