<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:text="@string/login_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#CCCCCC"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#777777"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <TextView
        android:id="@+id/wrong_id"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:textColor="#FF0000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#CCCCCC"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#777777"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_id" />

    <TextView
        android:id="@+id/wrong_pw"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/login_pw"
        app:layout_constraintTop_toBottomOf="@+id/login_pw" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#4DC7FF"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/white"
        android:text="@string/signup"
        android:textColor="#777777"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_2" />

</androidx.constraintlayout.widget.ConstraintLayout>