<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:ci_drawable="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pager" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:hint="title"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator" />

        <TextView
            android:id="@+id/mycomment"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:hint="my comment"
            android:maxLines="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewName" />

        <Button
            android:id="@+id/edit_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/backwhite"
            android:text="•••"
            android:textColor="#777777"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/mycomment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mycomment" />

        <TextView
            android:id="@+id/Destitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Destitle"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reson" />

        <TextView
            android:id="@+id/textViewDes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Destitle" />

        <TextView
            android:id="@+id/avgrating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:hint="rating"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingbarStyle" />

        <RatingBar
            android:id="@+id/ratingbarStyle"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="#333333"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mycomment" />

        <Button
            android:id="@+id/button_wish"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:background="@color/backwhite"
            android:drawableTop="@drawable/add"
            android:text="@string/wish"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingbarStyle"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_comment"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/backwhite"
            android:drawableTop="@drawable/comment"
            android:text="@string/comment"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toStartOf="@+id/button_play"
            app:layout_constraintStart_toEndOf="@+id/button_wish"
            app:layout_constraintTop_toTopOf="@+id/button_wish"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_play"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@color/backwhite"
            android:drawableTop="@drawable/play"
            android:text="@string/playing"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_comment"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/gray2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDes" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDes" />

        <TextView
            android:id="@+id/reson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reson"
            android:textColor="@color/gray"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_wish"
            app:layout_constraintTop_toBottomOf="@+id/button_comment" />

        <TextView
            android:id="@+id/textreson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="선호하는 태그 #RPG, #MOBILE"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@id/reson"
            app:layout_constraintTop_toBottomOf="@id/reson"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/gray2"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/reson" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray2"
            app:layout_constraintBottom_toTopOf="@+id/Destitle" />

        <Button
            android:id="@+id/buttonURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:background="@color/white"
            android:text="링크"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingbarStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>